--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -12,23 +12,23 @@
 
 <section class="container">
   <form method="post" action="/index">
-    <div>
+    <div class="form-group">
       <label>Songs title: </label>
-      <input type="text" name="title">
+      <input class="form-control" type="text" name="title">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>Author name: </label>
-      <input type="text" name="author">
+      <input class="form-control" type="text" name="author">
     </div>
 
-    <div>
+    <div class="form-group">
       <label>Link: </label>
-      <input type="text" name="url">
+      <input class="form-control" type="text" name="url">
     </div>
 
     <div>
-      <input type="submit" name="Submit">
+      <input class="btn btn-default" type="submit" name="Submit">
     </div>
     <div>
       <a href="/index">Cancel</a>
