--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 auto;
+  margin: 20px auto;
   padding-left: 30px;
   padding-right: 30px;
   width: 800px;
@@ -12,7 +12,7 @@
   width: 80%;
   padding: 10px;
   margin: 10px auto;
-  border-radius: 50%;
+  border-radius: 10px;
 }
 
 .song:hover {
@@ -23,6 +23,8 @@
   color: red;
 }
 
-label {
-  text-align: left;
+.song_list {
+  border: 2px double #e48fef;
+  border-radius: 10px;
+  padding: 20px 20px;
 }
