--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -9,7 +9,7 @@
 .song {
   border: 2px dashed brown;
   display: block;
-  width: 80%;
+  width: 600px;
   padding: 10px;
   margin: 10px auto;
   border-radius: 10px;
@@ -27,4 +27,8 @@
   border: 2px double #e48fef;
   border-radius: 10px;
   padding: 20px 20px;
+}
+
+.inline {
+  display: inline-block;
 }
