--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,14 @@
   <title></title>
 </head>
 <body>
-  <%= yield %>
+  <header class="container">
+<!--     <%= erb :_nav %>
+    <%= erb :_alert %> -->
+  </header>
+  <section class="container">
+    <%= yield %>
+  </section>
+  
 </body>
 </html>
 
