--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 <header class="container">
-  <h1>Welcome to Music Wall, <%= session["user_obj"].username if session["user_obj"] %></h1>
-  <% if session[:flash] %>
+<!--   <h1>Welcome to Music Wall, <%= session["user_obj"].username if session["user_obj"] %></h1> -->
+<!--   <% if session[:flash] %>
     <div class="error_message">
       <%= session[:flash] %>
     </div>
@@ -12,7 +12,7 @@
   <% else %>
     <a href="/songs/login" class="btn btn-primary">login</a> &nbsp &nbsp
     <a href="/songs/new_user" class="btn btn-default btn-xs">Sign up</a>
-  <% end %>
+  <% end %> -->
 </header>
 
 <section class="container song_list">
