--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,8 +24,8 @@
 </head>
 <body>
   <header class="container">
-<!--     <%= erb :_nav %>
-    <%= erb :_alert %> -->
+    <%= erb :_nav %>
+    <%= erb :_alert %>
   </header>
   <section class="container">
     <%= yield %>
